# Blockchain-as-a-way-of-being

./: Cargo.toml  README.md
guessing_game/src/: main.rs
src/: guessing_game.rs  main.rs  main.rs.save  rustBookCh3.rs  rustBookCh4.rs
src/FirstLayer1/: block.rs  main_block.rs  read.me
src/SolanaXEncode/: week1.rs  week1hw.rs  week2.rs  week2hw.rs  week3.rs  week3hw.rs  week3project1.rs
src/SolanaXEncode/homework_rust/: Cargo.toml
src/chapter3/: control_flow.rs  data_types.rs  experimentation3.rs  functions.rs
src/chapter4/: ownership.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1750853288126537  MANIFEST-000021
