[package]
name = "RustGitFolder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_program"
path = "src/main.rs"

[[bin]]
name = "data_types"  
path = "src/chapter3/data_types.rs"

[[bin]]
name = "functions"  
path = "src/chapter3/functions.rs"

[[bin]]
name = "control_flow"  
path = "src/chapter3/control_flow.rs"

[dependencies]
rand = "0.8.5"