[package]
name = "RustGitFolder"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main_program"
path = "src/main.rs"

[[bin]]
name = "data_types"  
path = "src/chapter3/data_types.rs"

[[bin]]
name = "functions"  
path = "src/chapter3/functions.rs"

[[bin]]
name = "control_flow"  
path = "src/chapter3/control_flow.rs"

[[bin]]
name = "experimentation3"  
path = "src/chapter3/experimentation3.rs"

[[bin]]
name = "block"  
path = "src/FirstLayer1/block.rs"

[[bin]]
name = "mainB"  
path = "src/FirstLayer1/main_block.rs"

[[bin]]
name = "week1"  
path = "src/SolanaXEncode/week1.rs"

[[bin]]
name = "week1hw"  
path = "src/SolanaXEncode/week1hw.rs"

[[bin]]
name = "week2"  
path = "src/SolanaXEncode/week2.rs"


[[bin]]
name = "week2hw"  
path = "src/SolanaXEncode/week2hw.rs"

[dependencies]
rand = "0.8.5"
serde        = { version = "1.0", features = ["derive"] }
bincode      = "1.3"          # compact binary encoding
sha2         = "0.10"         # SHA-256 for now – easy PoW prototype
thiserror    = "1.0"          # ergonomic error enums